# abstract-ranker

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  test.py
.github/workflows/: ci.yaml
abstract_ranker/: __about__.py  arxiv.py  conference_chat.py  conference_chat_streamlit.py  config.py  data_model.py  driver.py  indico.py  llm_utils.py  local_llms.py  minirag_ingester.py  openai_utils.py  output.py  ranker.py  summarize.py  utils.py
results/: README.md
results/abstract-ranking/: 2024-03-11 - ACAT 2024 - phi-3 mini.csv  2024-03-11 - ACAT 2024 - phi-3 small.csv  2024-03-11 - ACAT 2024-GPT4o-mini-unknown.csv  2024-03-11 - ACAT 2024-GPT4o-mini.csv  2024-03-11 - ACAT 2024-GPT4o-unknown.csv  2024-03-11 - ACAT 2024-GPT4o.csv  2024-06-03 - 12th Edition of the Large Hadron Collider Physics Conference-GPT4o-mini.csv  2024-10-19 - Conference on Computing in High Energy and Nuclear Physics - GPT4o-mini.csv  2024-10-19 - Conference on Computing in High Energy and Nuclear Physics - GPT4o.csv
results/archive/: arxiv-2024-08-29-cs.AI-cs.LG-cs.PL-hep-ex-hep-ph-physics.acc-ph-physics.data-an-physics.ins-det-stat.ML.csv  arxiv-2024-08-29-hep-ex-hep-ph.csv  arxiv-2024-08-29-hep-ex.csv  arxiv-2024-08-29-hep-ph.csv  arxiv-2024-08-30-hep-ex.csv
results/sumarize/: README.md  iris-hep-annual-meeting-minutes-gpt4o-mini.md  iris-hep-annual-meeting-minutes-gpt4o.md
tests/: conftest.py  test_arxiv.py  test_basics.py  test_indico.py  test_llm_utils.py  test_local_llms.py  test_minirag_ingester.py  test_openai_utils.py  test_ranker.py  test_utils.py
tests/data/: 1330797.json  CONNIE_ESPP2026.md  hep-ex-10.pkl
